secondfile/objects/AT_T_Product__c.object
<CustomObject>
    <description>Object which contains list of all AT&amp;T Products to be displayed in ATOM.</description>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Icon_Id__c</fullName>
        <label>Icon Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Size__c</fullName>
        <label>Icon Size</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <externalId>true</externalId>
        <label>Product Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AT&amp;T Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Icon_Id__c</columns>
        <columns>Icon_Size__c</columns>
        <columns>Image__c</columns>
        <columns>Product_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AT&amp;T Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>